--- a/src/styles.css
+++ b/src/styles.css
@@ -230,7 +230,8 @@ p {
   text-align: center;
   color: var(--text-secondary);
   padding: 1.25rem 2rem;
-  margin: -2rem auto 3rem;
+  margin: auto;
+  margin-top: 0.35rem;
   max-width: 820px;
   border: 2px solid transparent;
   border-radius: 1.25rem;
@@ -244,6 +245,7 @@ p {
   position: relative;
   z-index: 1;
   transition: all 0.3s ease-in-out;
+  
 }
 
 .section-subtitle::before {
